crates/core/tests/snapshots/lexer_fixed_format__continuation_across_comment_line_is_orphan.snap
---
source: crates/core/tests/lexer_fixed_format.rs
assertion_line: 206
expression: render(src)
---
  1:8  LevelNumber(5)       "05"
  1:11 Identifier           "A"
  1:13 Keyword(Value)       "VALUE"
  4:1  Eof                  ""
-- errors --
OrphanContinuation { span: Span { start: 47, end: 48, line: 3, column: 7 } }
UnterminatedStringLiteral { span: Span { start: 18, end: 24, line: 1, column: 19 } }
