crates/core/tests/snapshots/lexer_fixed_format__continuation_chain_three_lines.snap
---
source: crates/core/tests/lexer_fixed_format.rs
assertion_line: 133
expression: render(src)
---
  1:8  LevelNumber(5)       "05"
  1:11 Identifier           "A"
  1:13 Keyword(Value)       "VALUE"
  1:19 StringLiteral        "'AAA\n      -    'BBB\n      -    'CCC'"
  3:17 Period               "."
  4:1  Eof                  ""
