crates/core/tests/snapshots/lexer_fixed_format__continuation_keyword.snap
---
source: crates/core/tests/lexer_fixed_format.rs
assertion_line: 115
expression: render(src)
---
  1:8  LevelNumber(5)       "05"
  1:11 Identifier           "A"
  1:13 Keyword(Value)       "VALUE"
  2:12 Identifier           "SPACE"
  2:17 Period               "."
  3:1  Eof                  ""
