crates/core/tests/snapshots/lexer_fixed_format__continuation_missing_reopen.snap
---
source: crates/core/tests/lexer_fixed_format.rs
assertion_line: 150
expression: render(src)
---
  1:8  LevelNumber(5)       "05"
  1:11 Identifier           "A"
  1:13 Keyword(Value)       "VALUE"
  3:1  Eof                  ""
-- errors --
ContinuationWithoutReopeningQuote { expected: '\'', span: Span { start: 31, end: 32, line: 2, column: 7 } }
UnterminatedStringLiteral { span: Span { start: 18, end: 24, line: 1, column: 19 } }
