crates/core/tests/snapshots/lexer_fixed_format__nested_group.snap
---
source: crates/core/tests/lexer_fixed_format.rs
expression: render(src)
---
  1:8  LevelNumber(1)       "01"
  1:11 Identifier           "EMPLOYEE-RECORD"
  1:26 Period               "."
  2:11 LevelNumber(5)       "05"
  2:14 Identifier           "EMP-ID"
  2:24 Keyword(Pic)         "PIC"
  2:28 PictureString        "X(10)"
  2:33 Period               "."
  3:11 LevelNumber(5)       "05"
  3:14 Identifier           "EMP-NAME"
  3:24 Keyword(Pic)         "PIC"
  3:28 PictureString        "X(30)"
  3:33 Period               "."
  4:1  Eof                  ""
