crates/core/tests/snapshots/lexer_fixed_format__numeric_and_string_literals.snap
---
source: crates/core/tests/lexer_fixed_format.rs
expression: render(src)
---
  1:8  LevelNumber(5)       "05"
  1:11 Identifier           "A"
  1:13 Keyword(Value)       "VALUE"
  1:19 StringLiteral        "\"foo\""
  1:24 Period               "."
  2:8  LevelNumber(5)       "05"
  2:11 Identifier           "B"
  2:13 Keyword(Value)       "VALUE"
  2:19 NumericLiteral       "42"
  2:21 Period               "."
  3:8  LevelNumber(5)       "05"
  3:11 Identifier           "C"
  3:13 Keyword(Value)       "VALUE"
  3:19 StringLiteral        "'X'"
  3:22 Period               "."
  4:1  Eof                  ""
